[package]
name = "nostreye-cam"
version = "0.1.0"
edition = "2021"
description = "Camera operations + Nostr event signing on Raspberry Pi"
authors = ["prarthana"]

[[bin]]
name = "nostreye-cam"
path = "src/main.rs"

[dependencies]
# device-signer: hardware-linked secp256k1 key gen + Nostr Schnorr signing
device-signer = "0.1"

# Nostr protocol primitives (event building, kind constants, json serialisation)
nostr = { version = "0.44", features = ["std"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-std"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Ergonomic error handling
anyhow = "1"

# SHA-256 for building Nostr event ID hash
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
# HTTP client (rustls avoids OpenSSL on RPi)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# WebSocket for Nostr relay publishing
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Base64 encoding for Blossom auth header
base64 = "0.22"
